base/src/test/resources/failure/syntax/literate-ill-typed.aya.txt
In file $FILE:2:0 ->

  1 | open data Nat : Set | zero | suc Nat
  2 | --| test `suc Nat`
      ^----------------^

Error: Expected type: Nat
       Normalized: Nat
       Actual type: Set
       Normalized: Set
       They don't match, sorry
What are you doing?
